--- a/PROJECT2/Makefile
+++ b/PROJECT2/Makefile
@@ -1,7 +1,7 @@
 all: project2
 
 project2: project2.c
-	gcc project2.c -o project2 -Wall 
+	gcc project2.c -o project2 -Wall -lpthread
 
 clean:
 	rm project2
